# fastapi-project-1

./: .env.example  .gitignore  README.md  pyproject.toml
app/: app.py  db.py  schemas.py  users.py
